Detalles contacto, acerca de y preguntas frecuentes

--- a/about-us.html
+++ b/about-us.html
@@ -31,7 +31,8 @@
 
         <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
           <div class="d-flex ms-auto mt-2" role="search">
-            <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+              aria-label="Search">
             <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
               <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
             </button>
@@ -80,65 +81,66 @@
 
   <main>
     <div class="content">
-        <h1 class="mt-4 mb-4">Visión conjunta</h1>
-        <p class="fs-5">At LEGO, we share a clear and passionate vision: to build a future where creativity,
-            innovation, and fun come together to transform the world. We believe that the power of imagination
-            and collaboration can overcome any limits, and we are committed to fostering an environment where
-            ideas can flourish and become amazing realities.
+      <h1 class="mt-4 mb-4">Overview</h1>
+      <p class="fs-5">At LEGO, we share a clear and passionate vision: to build a future where creativity,
+        innovation, and fun come together to transform the world. We believe that the power of imagination
+        and collaboration can overcome any limits, and we are committed to fostering an environment where
+        ideas can flourish and become amazing realities.
 
-            Our mission is to inspire and empower people of all ages through interactive experiences and products
-            that challenge convention. We want to be a catalyst for creativity, a bridge that connects people and
-            encourages them to explore new possibilities, to learn and to grow together.</p>
+        Our mission is to inspire and empower people of all ages through interactive experiences and products
+        that challenge convention. We want to be a catalyst for creativity, a bridge that connects people and
+        encourages them to explore new possibilities, to learn and to grow together.</p>
     </div>
     <section class="mt-5">
-        <div class="fundadores-container">
-            <div class="container-fluid">
-                <div class="row gx-0">
-                    <!-- Carta 1 -->
-                    <div class="fundador-card separador col-12 col-md-6 col-6 mb-4 justify-content-center">
-                        <h4 class="fw-semibold mb-4 mt-3 fs-2">Founder & Creative Director</h4>
-                        <img class="mb-4" src="img/acerca-de/ashley.jpg" width="90%" alt="">
-                        <h3 class="fw-semibold mb-4 fs-2">Personal Information</h3>
-                        <p class="fs-5"><b class="fs-5">Name:</b> Ashley Núñez Gutiérrez</p>
-                        <p class="fs-5"><b class="fs-5">Identification: </b> 1-1907-0658</p>
-                        <p class="fs-5"><b class="fs-5">Email: </b>asnunezgu@est.utn.ac.cr</p>
-                        <p class="fs-5"><b class="fs-5">Contact Number: </b>8599-2121</p>
-                        <p class="fs-5"><b class="fs-5">Age: </b>20 years old</p>
-                        <p class="fs-5">Ashley brings her boundless creativity and inspiring vision to the team.
-                            With a strong background in products design she has been the driving force behind the
-                            conceptualization
-                            and execution of our most innovative initiatives. Her passion for excellence and her
-                            ability to connect
-                            with people have been instrumental in building a brand
-                            that resonates with our customers.
+      <div class="fundadores-container m-3">
+        <div class="container-fluid">
+          <div class="row gx-0">
+            <!-- Carta 1 -->
+            <div class="fundador-card separador col-12 col-md-6 col-6 mb-4 justify-content-center">
+              <h4 class="fw-semibold mb-4 mt-3 fs-2">Founder & Creative Director</h4>
+              <img class="mb-4" src="img/acerca-de/ashley.jpg" width="90%" alt="">
+              <h3 class="fw-semibold mb-4 fs-2">Personal Information</h3>
+              <p class="fs-5"><b class="fs-5">Name:</b> Ashley Núñez Gutiérrez</p>
+              <p class="fs-5"><b class="fs-5">Identification: </b> 1-1907-0658</p>
+              <p class="fs-5"><b class="fs-5">Email: </b>asnunezgu@est.utn.ac.cr</p>
+              <p class="fs-5"><b class="fs-5">Contact Number: </b>8599-2121</p>
+              <p class="fs-5"><b class="fs-5">Age: </b>20 years old</p>
+              <p class="fs-5">Ashley brings her boundless creativity and inspiring vision to the team.
+                With a strong background in products design she has been the driving force behind the
+                conceptualization
+                and execution of our most innovative initiatives. Her passion for excellence and her
+                ability to connect
+                with people have been instrumental in building a brand
+                that resonates with our customers.
 
-                        </p>
-                    </div>
-
-                    <!-- Carta 2 -->
-                    <div class="fundador-card separador col-12 col-md-6 col-6 mb-4 justify-content-center">
-                        <h4 class="fw-semibold mb-4 mt-3 fs-2">Co-founder & Manager</h4>
-                        <img class="mb-4" src="img/acerca-de/gerald.jpg" width="90%" alt="">
-                        <h3 class="fw-semibold mb-4 fs-2">Personal Information</h3>
-                        <p class="fs-5"><b class="fs-5">Name:</b> Gerald López Solano</p>
-                        <p class="fs-5"><b class="fs-5">Identification: </b> 2-864-376</p>
-                        <p class="fs-5"><b class="fs-5">Email: </b>gelopezso@est.utn.ac.cr</p>
-                        <p class="fs-5"><b class="fs-5">Contact Number: </b>6030-4366</p>
-                        <p class="fs-5"><b class="fs-5">Age: </b>19 years old</p>
-                        <p class="fs-5">Gerald López is an innovator with a strategic mind and a deep love of
-                            design.
-                            His experience in marketing and branding has allowed him to transform complex ideas into
-                            practical and exciting solutions. Their ability to see beyond the conventional and
-                            their meticulous focus on every detail are the foundation on which our unique offering
-                            is built.
-                        </p>
-                    </div>
-                </div>
+              </p>
             </div>
+
+            <!-- Carta 2 -->
+            <div class="fundador-card separador col-12 col-md-6 col-6 mb-4 justify-content-center">
+              <h4 class="fw-semibold mb-4 mt-3 fs-2">Co-founder & Manager</h4>
+              <img class="mb-4" src="img/acerca-de/gerald.jpg" width="90%" alt="">
+              <h3 class="fw-semibold mb-4 fs-2">Personal Information</h3>
+              <p class="fs-5"><b class="fs-5">Name:</b> Gerald López Solano</p>
+              <p class="fs-5"><b class="fs-5">Identification: </b> 2-864-376</p>
+              <p class="fs-5"><b class="fs-5">Email: </b>gelopezso@est.utn.ac.cr</p>
+              <p class="fs-5"><b class="fs-5">Contact Number: </b>6030-4366</p>
+              <p class="fs-5"><b class="fs-5">Age: </b>19 years old</p>
+              <p class="fs-5">Gerald López is an innovator with a strategic mind and a deep love of
+                design.
+                His experience in marketing and branding has allowed him to transform complex ideas into
+                practical and exciting solutions. Their ability to see beyond the conventional and
+                their meticulous focus on every detail are the foundation on which our unique offering
+                is built.
+              </p>
+            </div>
+          </div>
         </div>
+      </div>
+      </div>
     </section>
-</main>
-<footer class="pie-pagina">
+  </main>
+  <footer class="pie-pagina">
     <div class="grupo-1">
       <div class="container-fluid">
         <div class="row">
@@ -211,8 +213,8 @@
       <small>&copy; 2024 <b>Lego</b> - All rights reserved </small>
     </div>
   </footer>
-<!-- Boostrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <!-- Boostrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
