--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -116,8 +116,7 @@
                         <li>18+</li>
                     </ul>
                 </div>
-                <img src="img/common questions/Question 1.jpg" alt="Boy playing with Legos" class="img-fluid"
-                    style="max-width: 60%;">
+                <img src="img/common questions/Question 1.jpg" alt="Boy playing with Legos" class="img-fluid">
             </div>
         </div>
 
