--- a/contacto.html
+++ b/contacto.html
@@ -35,9 +35,9 @@
 
                 <div class="collapse navbar-collapse justify-content-evenly" id="navbarSupportedContent" width="100">
                     <div class="d-flex ms-auto mt-2" role="search">
-                        <input disabled id="searchInput" class="form-control me-2" type="search" placeholder="Search"
+                        <input id="searchInput" class="form-control me-2" type="search" placeholder="Search"
                             aria-label="Search">
-                        <button disabled id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
+                        <button id="searchButton" onclick="search()" class="btn btn-primary" type="submit">
                             <img class="mb-1" src="./icons/Search.svg" alt="Search-icon" width="36" height="30">
                         </button>
                     </div>
@@ -75,7 +75,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
@@ -91,7 +91,7 @@
                     <h3>Contact Us</h3>
 
                     <label for="name">Full name:</label>
-                    <input type="text" id="name" class="box">
+                    <input type="text" id="name" class="estilo-input">
                     <p id="error-message" style="color:red; display:none;">Please insert a valid full name</p>
 
                     <label for="gender-radios">Select your gender:</label>
@@ -109,20 +109,20 @@
                     </div>
 
                     <label for="birth-date">Birth date:</label>
-                    <input type="date" id="birth-date" class="box">
+                    <input type="date" id="birth-date" class="estilo-input">
                     <p id="date-warning" style="color:red; display:none;"></p>
 
                     <label for="email" class="form-label">Email address:</label>
-                    <input type="email" class="box" id="email" placeholder="name@example.com">
+                    <input type="email" class="estilo-input" id="email" placeholder="name@example.com">
                     <p id="email-warning" style="color:red; display:none;">Please insert a valid email. Example:
                         name@gmail.com</p>
 
                     <label for="affair">Affair:</label>
-                    <input type="affair" id="affair" class="box">
+                    <input type="affair" id="affair" class="estilo-input">
                     <p id="affair-warning" style="color:red; display:none;">The subject field cannot be empty</p>
 
                     <label for="message">Message:</label>
-                    <textarea class="box" id="message" cols="30" rows="10"></textarea>
+                    <textarea class="estilo-input" id="message" cols="30" rows="10"></textarea>
 
                     <!--<label for="select">Province:</label>
                     <select name="provincias" id="" class="box">
@@ -136,7 +136,7 @@
                     </select>-->
 
                     <label for="options" class="form-label">Select a project (Optional):</label>
-                    <select id="options" name="options" class="box">
+                    <select id="options" name="options" class="estilo-input">
                         <option value="opcion1">None</option>
                         <option value="opcion2">Lego Insiders</option>
                         <option value="opcion3">Lego MindStorms</option>
