Detalles finales (errores en links de about us y contact us

--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
     <div class="collapse navbar-collapse container-fluid justify-content-center">
       <ul class="navbar-nav justify-content-evenly" style="width: 75%;">
         <li class="nav-item">
-          <a class="nav-link active nav-animation" aria-current="page" href="#">Home</a>
+          <a class="nav-link active nav-animation" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active nav-animation" href="lista-productos.html">Shop</a>
