--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
       <section>
       <div class="contenedor-features">
         <div class="card-feature">
-          <img src="img/inicio/charact-icons/secure.png" alt="">
+          <img src="img/inicio/charact-icons/brain.png" alt="">
           <div class="feature-content">
-            <span class="fs-4">Contrareembolso</span>
+            <span class="fs-4">Innovation</span>
           </div>
         </div>
 
