--- a/contacto.html
+++ b/contacto.html
@@ -75,7 +75,7 @@
                     <a class="nav-link active nav-animation" href="preguntas-frecuentes.html">Help</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active nav-animation" href="acerca-de.html">About Us</a>
+                    <a class="nav-link active nav-animation" href="about-us.html">About Us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="contacto.html">Contact Us</a>
